# placeholder-engine

./: .gitignore  CMakeLists.txt  LICENSE
PlaceholderEngine/: CMakeLists.txt  Config.cpp  MonoBehavior.cpp  PlaceholderEngine.cpp  PlaceholderEngine.h  RenderTargets.cpp  UIRenderer.cpp
PlaceholderEngine/include/: PlaceholderEngine.h  RenderTargets.h  Scene.h  UIRenderer.h
